--- a/2024/2024-11-03.md
+++ b/2024/2024-11-03.md
@@ -1,124 +1,68 @@
-
+# Cancel Prime, not the Post, to strike back at Bezos
 <!--
 
+Other possibilities...
 
-- VC's are embracing web3 + AI: https://www.coindesk.com/business/2024/10/24/why-web3-vcs-are-embracing-cryptoai/ |  Andreessen on AI models: https://techcrunch.com/2024/10/22/marc-andreessen-says-ai-model-makers-are-in-a-race-to-the-bottom-and-its-not-god-for-business/
-
-- New canada custodian pushing for ETF business: https://www.coindesk.com/business/2024/10/25/newly-qualified-crypto-custodian-balance-aims-to-bring-etf-assets-held-in-the-us-back-to-canada/
-
-- Hacker returns money to U.S. government wallet: | https://finance.yahoo.com/news/hackers-swipe-20-million-crypto-210028373.html | https://www.theblock.co/post/323108/prosecutors-expected-to-offer-plea-deal-to-alleged-sec-hacker-who-falsely-said-bitcoin-etfs-were-approved
-
-- New PA bill: https://www.coindesk.com/policy/2024/10/25/pennsylvania-house-of-representatives-passes-crypto-bill-to-bring-regulatory-clarity-report/
-
-- Lazard will use Bittfiniex to offer tokenized RWAs: https://www.coindesk.com/business/2024/10/25/wall-street-financial-services-firm-lazard-plans-to-create-tokenized-funds-with-bitfinex-securities/
-
-- Overseas regulation: https://news.bitcoin.com/russia-publishes-new-crypto-law-expanding-state-control-over-digital-assets/ | Netherlands story https://www.coindesk.com/policy/2024/10/25/netherlands-starts-consulting-on-crypto-tax-reporting-bill/
-
-
-- Has HBO identified Satoshi? https://www.youtube.com/watch?v=DGzzlNLsi6k | https://decrypt.co/288353/peter-todd-isnt-hiding-satoshi-nakamoto-bitcoin
-
+- Much ado about very little at the Bezos Post
+- Why I'm not as angry at Jeff Bezos as I should be
+- Get drafts from Leo
+- A Bezos-sized headache at the Washington Post
+- I still ((heart)) the Bezos Post
+- The Bezos Post still rocks.
+- A big misstep by Bezos at the Post.
+- Why I still ((heart)) the Bezos Post
 
 -->
-
-<!--
-
-Some leftovers. Perhaps use this to riff on for blog or social posts:
-
-
-is a big successs for Polygon, but TKTK:  | Polymarket cracking down on betting by US nationals. https://www.bloomberg.com/news/articles/2024-10-22/polymarket-cracks-down-on-us-bettors-ahead-of-presidential-election | https://www.theblock.co/post/323128/polymarket-ceo-emphasizes-platforms-non-partisan-position-ahead-of-election-says-it-provides-much-needed-alternative-data
-
-
-- **Market updates:** DOJ probing Tether:  | Goldman forecasting weak s+p growth. https://www.investopedia.com/wave-goodbye-to-the-stock-market-s-historic-run-goldman-sachs-says-8731471 | More on gold records. https://slate.com/technology/2024/10/gold-prices-record-breaking-investing-stock-market-crypto.html |
-
-- Other election updates: Consensys published an open letter to the next U.S. president. https://consensys.io/blog/consensys-letter-to-the-future-u-s-president-on-crypto-regulation | Ripple CEO: Kamala taking a nuanced approach to crypto. https://decrypt.co/287968/ripple-ceo-nuanced-crypto-approach-kamala-harris |  | Billionaires funding Stop the Steal 2.0: https://www.wsj.com/politics/elections/donald-trump-contest-election-outcome-4521f4f7?st=UrNFuu&reflink=desktopwebshare_permalink
-
-
-- Bearish Goldman forecast for stocks: https://www.investopedia.com/wave-goodbye-to-the-stock-market-s-historic-run-goldman-sachs-says-8731471 <!-- Riff on this for annual report as well. Concentration works against stocks but in favor of crypto.
-
-- New RWA mainnet launches: https://www.theblock.co/post/321800/ostium-labs-a-startup-building-onchain-perpetuals-markets-for-traditional-assets-launches-mainnet
-
-- WorldCoin re-branding: https://www.forbes.com/sites/richardnieva/2024/10/17/sam-altmans-worldcoin-world-rebrand/ | https://techcrunch.com/2024/10/17/sam-altmans-worldcoin-becomes-world-and-shows-new-iris-scanning-orb-to-prove-your-humanity/
-
-- Games that pay BTC to play: https://decrypt.co/205392/bitcoin-booming-you-earn-more-playing-free-games
-
-- New blockchain trilemma: https://www.coindesk.com/opinion/2024/10/18/the-new-blockchain-trilemma-is-here-and-its-not-about-technology/
-
-- https://www.theblock.co/post/322032/defi-can-complement-centralized-financial-systems-says-federal-reserves-christopher-waller
-
-- **Layoffs in Netflix's gaming unit.** https://www.businessinsider.com/netflix-shakes-up-gaming-division-new-epic-hire-layoffs-2024-10
-
-- Kraken creates new version of wrapped bitcoin: https://decrypt.co/286934/wrapped-bitcoin-wars-kraken-kbtc
-
-- Singapore's largest bank DBS launched a new RWA service: https://www.theblock.co/post/322019/the-daily-dbs-introduces-tokenized-banking-services-blackrocks-bitcoin-etf-attracts-1-billion-in-less-than-a-week-and-more
-
-- New web3 hotel: https://www.koreatimes.co.kr/www/nation/2024/10/602_384320.html
-
--->
-
-<!--
-- New dGEN1 device. https://decrypt.co/287120/dgen1-mobile-device-launches-for-seamless-onchain-ethereum-transactions
-
-- https://venturebeat.com/games/yuga-labs-brings-ai-to-blockchain-with-apechain-creator-platform/
-
-- Andreesen funded AI becomes a millionaire: https://www.theblock.co/post/322002/marc-andreessen-funded-ai-bot-becomes-a-millionaire-after-fartcoin-holdings-rally
-
--->
-<!--
-
-- Delay in Nigeria trial of Binance exec: https://decrypt.co/287207/jailed-binance-exec-trial-postponed-illness
-
--->
-
-
-<!--
-
-- Citadel's Griffin on what's wrong with Media: https://fortune.com/2024/10/11/citadel-ken-griffin-media/ <!-- Probably a good social share as well.
-
-- Talking career goals in intvus: https://www.fastcompany.com/91205202/how-should-i-talk-about-my-career-goals-in-an-interview
-
-- Nonprofit trying to "kill Twitter": https://disinformationchronicle.substack.com/p/election-exclusive-british-advisors
-
-- WSJ's Stern: Apple's AI isn't very smart yet. https://www.wsj.com/tech/personal-tech/apple-intelligence-3833c320?st=7j2X8S&reflink=desktopwebshare_permalink
-
--->
-
-
-
-# TKTKTK
 ## Week in Review: Oct. 27 to Nov. 2, 2024
 
-<!-- ![Investor holding up a physical ether coin](https://w3w.news/img/eth-2048.jpg)
-*Unedited photo by Ivan Radic via [Flickr](https://www.flickr.com/people/26344495@N05/) under Creative Commons [license](https://creativecommons.org/licenses/by/2.0/).* -->
+![File photo of Jeff Bezos](https://w3w.news/img/bezos-1920.jpg)
+*Amazon founder Jeff Bezos at a public event for his space exploration startup Blue Origin in 2019. File photo, slightly cropped, by Daniel Oberhaus via [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:Jeff_Bezos_Unveils_Blue_Origin_Lunar_Lander.jpg) under Creative Commons [license](https://creativecommons.org/licenses/by/4.0/deed.en).*
 
+**Perhaps what democracy really dies from** is self-inflicted injury.
 
-### Week in Review
+Sadly, the [Washington Post](https://www.npr.org/2024/10/25/nx-s1-5165353/washington-post-presidential-endorsement-trump-harris) and [Los Angeles Times](https://www.cjr.org/business_of_news/los-angeles-times-editorials-editor-resigns-after-owner-blocks-presidential-endorsement.php) just suffered serious harm of exactly that sort.
 
-- Google news searches... Blockchain: https://news.google.com/search?q=blockchain&hl=en-US&gl=US&ceid=US%3Aen | Crypto: https://news.google.com/search?q=crypto&hl=en-US&gl=US&ceid=US%3Aen | Web3: https://news.google.com/search?q=web3&hl=en-US&gl=US&ceid=US%3Aen
-- tk
-- tk
-- tk
+Each paper's billionaire owner has decided at the 11th hour to cancel his editorial board's endorsement for U.S. president. That in turn has triggered staff resignations, open criticism of management, and reader wariness about possible meddling in future coverage.
+
+The fallout for now seems especially brutal at the Post, owned by Amazon founder Jeff Bezos. He penned [a column](https://news.google.com/read/CBMijAFBVV95cUxQV1hHUHBPNngzZW41ckpDY2VWUFI0VEdCNklTUkRRczgwNUZSeXk4SXRocXpteE5SWDlYcDl4Wll4UUZLNXMzVXJMcmxNODlCTEYyZlBrUDhPT2tRRlhVQmxSSzEwb0RmT01VLXJwMlN2VVZZOENLWFdUNkMxQnp2N1NMRnhQODRiT3BvXw?hl=en-US&gl=US&ceid=US%3Aen) on Monday to defend the paper's non-endorsement as a measure to boost its credibility as a nonpartisan institution.
+
+Nevertheless, the Post said last week that more than 250,000 readers have [canceled their subscriptions](https://apnews.com/article/washington-post-endorsement-subscribers-c8380f19023322fe3c4bc1ab8541c14c), about 10% of the paper's subscriber base. That revenue hit, at a time when the Post has already been [losing money](https://www.cnn.com/2024/05/23/media/washington-post-will-lewis-turnaround-plan/index.html), will almost certainly [translate to newsroom cuts](https://www.wsj.com/business/media/washington-post-staffers-fear-fallout-amid-subscriber-exodus-38fff88b?st=Ybcja2&reflink=desktopwebshare_permalink) in the near future.
+
+For that reason, as a long-ago cub reporter at the Post myself, I have to say [I don't think ](https://x.com/peteramckay/status/1851994906442563708) canceling your Post subscription is a good way to register disapproval right now. Much better, as Slate's Laura Miller [recommends](https://slate.com/business/2024/10/washington-post-endorsement-election-cancel-jeff-bezos.html), to cancel your Amazon Prime subscription to hit Bezos where it will *really* hurt.
+
+### Week in Review: Oct. 27 to Nov. 2, 2024
+
+- **The odds of a Kamala Harris win** have been rising [on Polymarket](https://polymarket.com/) heading into Tuesday's presidential vote in America, boosted by traders [hedging earlier bets](https://www.coindesk.com/markets/2024/11/01/harris-odds-rise-on-polymarket-as-election-fraud-allegations-ramp-up-trump-hedge-bets/) on Donald Trump. The Polygon-based prediction platform recently put the vice president's chance of victory at 46%, up from 33% on Wednesday. Polymarket's current reading for Harris is now roughly in line with the news site Fivethirtyeight's [probability model](https://projects.fivethirtyeight.com/2024-election-forecast/).
+
+- **Google CEO Sundar Pichai** said more than 25% of new code for the company's products is now being written by AI. ([Ars Technica](https://arstechnica.com/ai/2024/10/google-ceo-says-over-25-of-new-google-code-is-generated-by-ai/))
+
+- **Web3 startups raised $1.4 billion** in venture investment in the third quarter. That brings the total for 2024 so far to [5.4 billion](https://cointelegraph.com/news/vc-roundup-web3-funding-5-4-billion-2024), according to Crunchbase data. One particular bright spot: decentralized apps built on the Solana chain. Cointelegraph reports that investment in that cateogry [jumped 54%](https://cointelegraph.com/news/institutional-investments-solana-dapps-54-percent-q3) to $173 million in the third period.
+
+- **However, some companies in the industry** are laying off workers due to worries about possible turbulence ahead. Consensys, DYdX, and Kraken were among the notable names announcing cutbacks of at least 15% of headcount last week. ([Decrypt](https://decrypt.co/289687/bitcoin-surging-why-crypto-layoffs))
+
+- **Two Ethereum Foundation researchers resigned** from advisory roles at the re-staking platform EigenLayer to quell community concerns about possible conflicts of interest. ([CoinDesk](https://www.coindesk.com/tech/2024/11/02/ethereum-researchers-relinquish-eigenlayer-roles-over-conflict-of-interest-concerns/))
+
+- **UBS Asset Management launched** a new money market fund on the Ethereum chain. ([CryptoSlate](https://cryptoslate.com/ubs-launches-its-first-tokenized-fund-on-ethereum-blockchain/))
+
+- **Emory University disclosed** that it holds $16 million of its endowment in an exchange-traded fund holding bitcoin. That makes Emory the first educational institution to make a significant investment in bitcoin ETFs, according to [Bloomberg analyst Eric Balchunas](https://x.com/EricBalchunas/status/1850884568553013459).
+
+- **America's Treasury Department is ramping up** scrutiny of foreign real-estate deals near the country's military bases. The move is a followup to the agency's shutdown of a Chinese-backed crypto mining operation near a Wyoming nuclear base earlier this year. ([CoinDesk](https://www.coindesk.com/policy/2024/11/01/plan-a-crypto-mine-near-a-us-military-base-expect-a-bigger-hassle-now/))  
+
+- **President Biden thanked** his Nigerian counterpart for releasing a jailed Binance executive who is a U.S. national on medical grounds. ([Decrypt](https://decrypt.co/289022/biden-thanks-nigerian-president-binance-exec))
 
 ### Community
 
-- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)   
-
-<!--
-
-- Add BTC addy...
-
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar ->
-
-- Promote gift subs...
-
--->
+- **We have some great exclusive content coming** over the next few months for paid subscribers to w3w. For Founding Members, I'm working on a Year in Review & 2025 Outlook that will go out in December covering important trends to look for in emerging tech. At all paid tiers, I'll also be offering an Intro to Web3 webinar to cover the basics of decentralization. Don't miss out! [Upgrade to a paid subscription today.](https://w3wnews.substack.com/subscribe)
 
 ### Odds & Ends
 
-- Ellison belongs in classrooms: https://www.washingtonpost.com/opinions/2024/10/23/liberties-ralph-ellison-literature-schools/ <!-- Need Google News referral link, for paywall purposes... -->
+- **China cracked down on... Halloween costumes?** Police were vigilant in Shanghai and other cities during the week's spooky holiday for anyone dressed to make a sly political statement. Yikes. ([Washington Post](https://news.google.com/read/CBMikwFBVV95cUxQeF9LNzljYkVXc2VTZ2gyMTcySFFpbnhhRmhlT2hNUWJVcTh6X2pNekQxQUhGVlVMR2l0LXFQYjd1dVBJYnplc1FsclZUSXBEbTJMbGhrZzZFVTRQYlVtRGpqcHNfaTQzN1JQZDMzaUxkZkpHNXZjaS1oZFlFTTdoejd1M3VrdWVLS0xjUFJLbHlCd1E?hl=en-US&gl=US&ceid=US%3Aen))
+
+- **The BBC reports that some rando** tried to [charge admission](https://www.bbc.com/news/articles/c079zp2vy31o) *to a press conference* in London on Thursday to "announce" that he's Satoshi Nakamoto. You know, like a person holding billions of dollars in bitcoin would probably do. 🤣
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
-_**About me: I'm a New York-based creator with more than seven years' experience in marketing and content about web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning at the time about blockchain tech and decentralization with other people interested in such stuff.**_
+_**About me: I'm a New York-based content creator with more than seven years' experience in web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning about blockchain tech and decentralization with other people getting up to speed on such stuff.**_
 
  _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done contract work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
 
