--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -46,45 +46,15 @@
 
 - **Bitcoin's valuation briefly surpassed that of Google's parent Alphabet.** The cryptocurrency also became the world's [fifth-largest asset](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap) by market capitalization. However, a [strong earnings report](https://finance.yahoo.com/news/google-stock-rises-after-it-beats-on-earnings-raises-dividend-and-authorizes-70-billion-in-buybacks-192027323.html) from Alphabet helped it recover ground later in the week. As of Friday's close on Wall Street, Alphabet was valued at $TK trillion versus $TK trillion for bitcoin... <!-- Update after Friday's close. --> An [improved](https://www.reuters.com/world/china/china-considers-exempting-some-goods-us-tariffs-source-says-2025-04-25/) outlook on tariffs helped propel riskier assets like stocks and crypto throughout the week. That said, fears of a [possible U.S. recession](https://www.yahoo.com/news/imf-raises-us-recession-risk-192909541.html) are likely to simmer awhile longer.
 
-- **Antitrust woes piled up for Big Tech in U.S. courtrooms.** The Justice Department says it wants to [break up Google](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case). Regulators argue that Google’s dominance in search stifles competition and harms consumers. This case could set a precedent for future tech antitrust actions. Industry experts are divided, with some predicting a lengthy court battle and others suggesting this could lead to broader reforms in the tech sector. ([NBC News](https://www.nbcnews.com))
+- **Big Tech's antitrust woes piled up in court.** The U.S. Justice Department told a federal judge in Washington it believes [Google should be broken up](https://news.google.com/read/CBMiiAFBVV95cUxPb0J4YWpWUW1aSXZUeUdkT0lPUnNvWFRIYzRRaWVhUmFzSlduSUNNWGpzRGxlT0xhaWtJU0J3ZVlPUWJkamhhY2xtZXV6TTVOOWZNUElYODV3dVFIRGxKcTN4Y0Z2U2l4OWR0d1djeXJBZDROS0xSLWU5QXNHOVpTYjk0QUxvckww?hl=en-US&gl=US&ceid=US%3Aen), including a sale of its Chrome browser. Google's lawyers are pushing for a narrower set of remedies... Meanwhile, in Meta's antitrust trial, the government introduced into evidence internal company emails in which CEO Mark Zuckerberg weighed a possible spin-off of Instagram due to concerns it was ["cannibalizing"](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) Facebook's user engagement.
 
-<!-- Old Leo version
+- **Newsweek has been all over stories about real-life AI use cases lately.** Funny enough, I must confess I only noticed this with some help from NotebookLM. Among the [recent stories](https://www.newsweek.com/topic/artificial-intelligence) covered by Newsweek's tech team: Bipedial robots [racing humans](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025) in a Beijing half-marathon, a study in Dubai finding that one-third of government jobs there are at risk of being [replaced by AI](https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953), a startup using AI to [enhance the customer experience](https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193) for charging electric vehicles, and U.S. healthcare companies' tentative steps to use AI to [optimize revenue](https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141).  
+- **Paul Atkins was sworn in as a pro-crypto SEC chair.** He thus [replaces](https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/) Gary Gensler, the Biden-era appointee widely despised in the industry for waging what many executives regarded as an overzealous crackdown by the securities regulator... But that's not to say the transition will be easy for Atkins. He immediately [faces pressure](https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850) to decide on 72 pending crypto-related applications to list new exchange-traded funds, with Ripple leading the filings. Plus there's the uncanny tendency of his boss and other senior administration officials to [do things](https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders) concerning crypto that would likely be called "insider trading" if they were to happen in the stock market.
 
-- **U.S. antitrust cases:** The U.S. government is pushing for Google to be [broken up](https://www.nbcnews.com/tech/tech-news/google-faces-us-government-attempt-break-company-search-monopoly-case-rcna202206?link_source=ta_bluesky_link&taid=680695c966e4b3000122e978) as a punishment for its alleged search engine monopoly, with a federal judge set to decide on remedies by Labor Day. The case, which has been ongoing since 2020, involves allegations that Google has been stifling competition and innovation, and could have significant implications for the tech industry. | The Justice Department is [urging](https://www.wsj.com/tech/google-justice-department-search-monopoly-hearing-d527c010?st=8x7TPT&reflink=desktopwebshare_permalink) a federal judge to force Google to loosen its grip on the search engine market by selling its Chrome web browser, as part of a landmark antitrust case. The move, which could result in new limits on Google, comes after a major ruling against the company in a separate antitrust case, and has been backed by more than 30 state attorneys general. |
+- **Stablecoins are getting more intertwined with traditional banking.** Circle, the company behind the $60 billion USDC stablecoin, launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co)) | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. |  The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions.
 
-
- In a surprising twist, internal emails from 2018 [have surfaced](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) showing that Meta CEO Mark Zuckerberg considered spinning out Instagram as a separate business due to concerns that its growth was cannibalizing Facebook's user engagement. According to the emails, Zuckerberg proposed building bridges between Meta's apps to prevent this cannibalization and even suggested rebranding Instagram and WhatsApp to emphasize Facebook's dominance.
-
--->
-
-
-
-- **Robots race humans in Beijing marathon:** In a groundbreaking experiment, 21 humanoid robots competed in the [Beijing Half-Marathon](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-2025), marking a historic first for AI and robotics. The event showcased advancements in robotics technology, as some robots completed the grueling race alongside human runners. Newsweek’s coverage highlighted the implications for AI’s expanding role in human activities. This milestone sparks questions about the future of robotics in sports and other aspects of life. ([Newsweek](https://www.newsweek.com))
-
-
-<!-- Old Leo version
-
-- **Newsweek has been doing a bang-up job covering specific AI use cases lately.** In a historic first, 21 humanoid robots [competed](https://www.newsweek.com/robots-race-humans-beijing-half-marathon-humanoid-2061818) in a bipedal robot half-marathon in Beijing, with six robots successfully completing the 21.1-kilometer course. The event showcased the current state of humanoid robot technology, highlighting both impressive advancements and significant limitations in areas such as hardware robustness and endurance. |  A recent study in Dubai found that one-third of government jobs are at risk of being [replaced by AI](https://www.newsweek.com/ai-impact-artificial-intelligence-dubai-uae-2062953), with customer service, administrative, and front-line roles being the most vulnerable. The city's increasing reliance on AI could set an example for other governments to follow, highlighting the need for workers to adapt to an AI-driven workforce and for organizations to develop strategies to mitigate job displacement. | Electric Era has [debuted](https://www.newsweek.com/ai-enabled-electric-vehicle-charging-coming-this-year-2062193) its proprietary fast-charging technology, which utilizes artificial intelligence to enhance the electric vehicle charging experience. The AI-infused charging stations, powered by the company's Retailer AI software platform, offer personalized concierge experiences and retail engagement opportunities, allowing users to order food or find nearby points of interest while charging. | Hospitals are developing [their own AI tools](https://www.newsweek.com/ai-powered-claims-tools-healthcare-revenue-cycle-access-health-2062141) to improve the revenue cycle, with some leaders welcoming the help and others fearing it's just a Band-Aid for a broken system. According to a recent survey, only 7% of hospital CFOs expect AI to improve relationships with insurance companies, while 64% remain uncertain about its impact, but companies like Iodine Software and Cofactor AI are already showing promise in automating collections and improving labor efficiency. | Newsweek's topic page for AI is [here](https://www.newsweek.com/topic/artificial-intelligence).
-
--->
-
-
-
-- **Paul Atkins sworn in as pro-crypto SEC chair:** Paul Atkins, a former SEC commissioner known for his ties to the crypto industry, has officially assumed the role of SEC chairman. His appointment signals a potential shift toward more favorable regulatory policies for the crypto sector. Atkins has previously advocated for a balanced approach to regulation, emphasizing innovation while protecting investors. Industry leaders are optimistic about what his leadership could mean for blockchain and cryptocurrency adoption. ([CoinDesk](https://www.coindesk.com/policy/2025/04/21/paul-atkins-sworn-in-as-sec-chairman/)) | According to a recent report from the FBI's Internet Crime Complaint Center, Americans aged 60 and older lost nearly $3 billion to crypto fraud in 2024, despite making up only 17% of the population. This demographic accounted for 30% of the total crypto fraud losses, with an average loss of $83,000 per victim. The FBI has attributed the rise in crypto fraud to scams such as ATM and kiosk fraud, which saw incidents almost double from 2023 to 2024. [Read the full story](https://www.example.com)
-
-
-
-
-<!-- Old Leo version
-- **New pro-crypto SEC chair Atkins sworn in.** **Paul Atkins Sworn in as SEC Chairman**: Paul Atkins, a former SEC commissioner and crypto industry advisor, has been sworn in as the new chairman of the Securities and Exchange Commission. In his inaugural remarks, Atkins vowed to provide a "firm, regulatory foundation for digital assets" and work with President Trump to advance his agenda for bolstering the US economy and establishing the country as a leader in the global markets. [Link](https://www.upi.com/Top_News/US/2025/04/22/Paul-Atkins-sworn-in-sec-chairman/6911745372094/) | New SEC Chair Paul Atkins is facing pressure to decide on 72 pending crypto-related ETF applications, with XRP leading the filings. Atkins, a pro-innovation advocate, has expressed support for clear rules and a "firm regulatory foundation for digital assets," but it remains to be seen whether the SEC under his leadership will approve the pending ETFs. [Link](https://www.ibtimes.com/new-sec-chair-paul-atkins-under-pressure-72-crypto-related-etf-applications-xrp-leads-filings-3770850) | *Donald Trump's TRUMP Memecoin Sees 70% Surge After Dinner Event Announcement**: The TRUMP token rallied on Wednesday after an invitation to a dinner event with President Donald Trump for its largest holders was announced, briefly hitting $16 and reaching its strongest price since early March. This comes after $300 million worth of previously locked-up tokens were added to circulation last week, with 75% of existing tokens still locked up and another unlock expected in July. [Link](https://www.coindesk.com/markets/2025/04/23/trump-coin-jumps-70-on-president-s-dinner-event-for-top-token-holders) | The U.S. Securities and Exchange Commission (SEC) has delayed its decision on several crypto-related proposals, including ETFs for Polkadot and Hedera, until June 11. This delay is part of the agency's review of dozens of filings to launch crypto exchange-traded funds, which has been seen as a positive sign for the crypto industry under the current SEC leadership. [Link](https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals) | Cantor Equity Partners (CEP) stock has surged 130% after investors flocked to the company ahead of its potential merger with Twenty One Capital, a bitcoin investment vehicle backed by major players like Tether, Bitfinex, and SoftBank. The proposed merger is seen as a high-leverage bet on institutional bitcoin adoption, with Twenty One Capital potentially holding over 42,000 BTC at launch and introducing new metrics to measure shareholder value in BTC terms. [Link](https://www.coindesk.com/markets/2025/04/24/cantor-equity-shares-surge-55-jump-another-15-pre-market-on-bitcoin-spac-deal-buzz) | The US Securities and Exchange Commission (SEC) has delayed its decision on several crypto proposals, including those from Grayscale and Canary, to list and trade funds based on Polkadot and Hedera tokens. The agency is weighing dozens of filings to launch crypto exchange-traded funds and has pushed back its deadline to June 11 to consider the proposals. [Link](https://www.theblock.co/post/351909/us-sec-delays-decisions-on-polkadot-and-hedera-etfs-as-agency-weighs-dozens-of-crypto-proposals)
-
--->
-
-- **Circle bridges stablecoins and traditional banking:** Circle, the company behind the $60 billion USDC stablecoin, has launched a [new payments network](https://www.theblock.co/post/351720/circle-launches-payments-network-to-connect-banks-and-stablecoins). This initiative aims to connect stablecoins with traditional banking systems, enabling faster and more efficient transactions. The move is expected to strengthen the role of stablecoins in global finance. As stablecoins like USDC become more integrated with banks, the lines between traditional and decentralized finance continue to blur. ([The Block](https://www.theblock.co)) | Crypto exchanges are increasingly [launching](https://cointelegraph.com/news/crypto-firms-moving-into-wall-street-growing-synergy) traditional investment offerings, signaling a convergence between the crypto and traditional finance (TradFi) spaces. This move aims to provide investors with more flexibility and access to both worlds. Key players like Kraken and Coinbase are leading the charge, with some seeing TradFi as a safety net and others as a launchpad for broader adoption. |  The CME Group plans to [launch XRP futures](https://www.theblock.co/post/351899/cme-group-plans-to-launch-xrp-futures-its-fourth-ever-crypto-add) within a month, pending regulatory review, marking its fourth foray into cryptocurrency offerings. This move follows the company's listing of Solana futures and reflects its increasing interest in crypto amid shifting regulatory circumstances in the U.S. XRP, with a market capitalization of over $127 billion, is seen as a natural expansion for the CME given its institutional-friendly blockchain and partnerships with major financial institutions.
-
-<!-- Old Leo version
-
-- **Stablecoins are getting more intertwined with traditional banking.** *Circle Launches New Payments Network* Circle, the company behind the $60 billion USDC stablecoin, is launching a new payments and cross-border remittance network, aiming to rival Mastercard and Visa. The network, initially targeting remittances, is seen as a strategic move to consolidate Circle's position in the payments space, leveraging the growing adoption of stablecoins for global money transfers. [Link](https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network) | *Crypto firms are making a push to integrate with traditional banking, with several planning to apply for bank charters or licenses.* This move comes as the Trump administration works to incorporate crypto into mainstream finance, with Congress advancing legislation that would establish a regulatory framework for stablecoins and allow them to operate under stricter oversight. [Link](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink) -->
+<!-- Old Leo version --> 
+**Stablecoins are getting more intertwined with traditional banking.** *Circle Launches New Payments Network* Circle, the company behind the $60 billion USDC stablecoin, is launching a new payments and cross-border remittance network, aiming to rival Mastercard and Visa. The network, initially targeting remittances, is seen as a strategic move to consolidate Circle's position in the payments space, leveraging the growing adoption of stablecoins for global money transfers. [Link](https://www.coindesk.com/business/2025/04/21/stablecoin-giant-circle-is-launching-a-new-payments-and-remittance-network) | *Crypto firms are making a push to integrate with traditional banking, with several planning to apply for bank charters or licenses.* This move comes as the Trump administration works to incorporate crypto into mainstream finance, with Congress advancing legislation that would establish a regulatory framework for stablecoins and allow them to operate under stricter oversight. [Link](https://www.wsj.com/finance/currencies/crypto-knocks-on-the-door-of-a-banking-world-that-shut-it-out-082b3968?st=zDQWDU&reflink=desktopwebshare_permalink) -->
 
 ### Looking Ahead
 
